--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -173,6 +173,22 @@ a {
   text-transform: uppercase;
   border-radius: 0; }
 
+#video-wrapper {
+    width: 100%;
+    height 300px;
+  }
+
+  .video-container iframe,
+  .video-container object,
+  .video-container embed {
+    position: absolute;
+    top: 0;
+    left: 250px;
+    width: 100%;
+    height: 100%;
+    max-height: 450px;
+  }
+
 .btn-default {
   color: #42DCA3;
   border: 1px solid #42DCA3;
